--- a/platforms/android/Rousing/app/build.gradle
+++ b/platforms/android/Rousing/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.jaredrummler:colorpicker:1.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.mcxiaoke.volley:library:1.0.6@aar'
+    compile 'com.couchbase.lite:couchbase-lite-android:1.4.1'
 }
