--- a/platforms/mean/package.json
+++ b/platforms/mean/package.json
@@ -3,21 +3,7 @@
   "version": "0.0.0",
   "main": "server/index.js",
   "dependencies": {
-    "compression": "^1.7.1",
-    "core-js": "^2.4.1",
-    "cors": "^2.8.1",
-    "express": "^4.13.3",
-    "morgan": "~1.8.2",
-    "body-parser": "^1.13.3",
-    "method-override": "^2.3.10",
-    "cookie-parser": "^1.3.5",
-    "express-session": "^1.11.3",
-    "errorhandler": "^1.4.2",
-    "composable-middleware": "^0.3.0",
-    "fast-json-patch": "^2.0.5",
-    "lodash": "^4.17.4",
-    "lodash-es": "^4.17.4",
-    "lusca": "^1.4.1",
+    "async": "^2.6.1",
     "babel-core": "^6.18.2",
     "babel-eslint": "^8.2.3",
     "babel-plugin-angular2-annotations": "^5.1.0",
@@ -29,20 +15,38 @@
     "babel-preset-es2017": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-runtime": "^6.18.0",
-    "ejs": "^2.5.3",
-    "mongoose": "^4.1.2",
     "bluebird": "^3.3.3",
+    "body-parser": "^1.13.3",
+    "composable-middleware": "^0.3.0",
+    "compression": "^1.7.1",
     "connect-mongo": "^2.0.1",
-    "jsonwebtoken": "^7.0.0",
+    "cookie-parser": "^1.3.5",
+    "core-js": "^2.4.1",
+    "cors": "^2.8.1",
+    "ejs": "^2.5.3",
+    "errorhandler": "^1.4.2",
+    "express": "^4.13.3",
     "express-jwt": "^5.0.0",
+    "express-session": "^1.11.3",
+    "fast-json-patch": "^2.0.5",
+    "jsonwebtoken": "^7.0.0",
+    "lifx-http-api": "^1.0.3",
+    "lodash": "^4.17.4",
+    "lodash-es": "^4.17.4",
+    "lusca": "^1.4.1",
+    "method-override": "^2.3.10",
+    "mongoose": "^4.1.2",
+    "morgan": "~1.8.2",
     "passport": "~0.4.0",
-    "passport-local": "^1.0.0",
     "passport-facebook": "^2.0.0",
     "passport-google-oauth20": "^1.0.0",
+    "passport-local": "^1.0.0",
     "primus": "^7.0.1",
     "primus-emit": "^1.0.0",
-    "uws": "^8.14.1",
-    "serve-favicon": "^2.3.0"
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
+    "serve-favicon": "^2.3.0",
+    "uws": "^8.14.1"
   },
   "devDependencies": {
     "@angularclass/hmr-loader": "^3.0.4",
